packages/gumicorn/gumicorn-23.0.0.tar.gz/gumicorn-23.0.0/tests/requests/invalid/022.py
from gumicorn.config import Config
from gumicorn.http.errors import InvalidHeader

cfg = Config()
request = InvalidHeader
